--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#B8B6B6</color>
+    <color name="blue">#1994F6</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
